examples/valid/program71.c
int main(void) {
    int x;
    int y;
    int z;
    x = 5;
    y = 10;
    z = x > y && x < 20;
    return z;
}

