examples/invalid/program41.c
int main() {
    int x;
    x = 5;
    struct Point {
        int x;
        int y;
    };
    return x;
}

